src/drive/styles/filelist.styl
@require 'components/table.styl'
@require 'settings/palette.styl'

.fil-content-cell
    display flex

.fil-content-row
    &:hover
        .fil-content-file-select
            opacity 1
        .fil-content-sharestatus
            span > div:first-child // targets sharing avatars
                border-color var(--paleGrey)
    &--center
        justify-content center

.fil-content-row-selected
    @extend $table-row-selected

.fil-content-row-actioned
    background-color var(--paleGrey)

.fil-content-row-disabled
    opacity .4
    cursor default

    &:hover
      background inherit

.fil-content-row-bigger
    height rem(128)

.fil-content-ext
    color var(--coolGrey)

.fil-content-header
    &:first-child
        padding .5rem

.fil-content-mobile-head
    display none

.fil-content-mobile-header
    padding 1rem

.fil-sort-menu
    padding .5rem 0

.fil-sort-menu-item
    color var(--charcoalGrey)
    border-left 5px solid transparent

    &.fil-sort-menu-item-selected
        border-left 5px solid var(--dodgerBlue)
        font-weight bold

        &:after
            display inline-block
            content ''
            position absolute
            right 0.5rem
            width 2rem
            height 1.5rem
            background transparent embedurl('../assets/icons/icon-check-blue.svg') center .0625rem no-repeat

.fil-content-header-sortableasc:hover:after
.fil-content-header-sortabledesc:hover:after
.fil-content-header-sortasc:after
.fil-content-header-sortdesc:after
    display inline-block
    content ''
    margin-left .5rem
    width .75rem
    height .75rem

.fil-content-header-sortableasc:hover:after
    background transparent embedurl('../assets/icons/icon-arrow-up.svg') center .0625rem no-repeat
.fil-content-header-sortabledesc:hover:after
    background transparent embedurl('../assets/icons/icon-arrow-down.svg') center .0625rem no-repeat
.fil-content-header-sortasc:after
    background transparent embedurl('../assets/icons/icon-arrow-up-grey.svg') center .0625rem no-repeat
.fil-content-header-sortdesc:after
    background transparent embedurl('../assets/icons/icon-arrow-down-grey.svg') center .0625rem no-repeat

.fil-content-header-sortdesc
.fil-content-header-sortasc
    color var(--charcoalGrey)

.fil-content-header-sortdesc
.fil-content-header-sortasc
.fil-content-header-sortabledesc
.fil-content-header-sortableasc
    cursor pointer

column-width-large = 40%
column-width-medium = 20%
column-width-small = 15%
column-width-thumbnail = 3rem
column-width-thumbnail-bigger = 7rem

.fil-content-file
    flex 0 1 column-width-large
    user-select none
    background-position 0 center
    background-repeat no-repeat
    background-size rem(32) rem(32)

    &-openable
        cursor pointer

.fil-content-header.fil-content-file
    padding-left 0

.fil-content-cell
    &.fil-content-file
        flex 0 1 "calc(%s - %s)" % (column-width-large column-width-thumbnail)
        display flex
        align-items center
        padding   0 2rem 0 0
        font-size      1rem
        line-height    1.3
        white-space    nowrap
        overflow       hidden
        color var(--charcoalGrey)
        height 100%

    &.fil-content-file-select
        padding .9375rem .5rem

.fil-content-row-bigger .fil-content-cell.fil-content-file
    flex 0 1 "calc(%s - %s)" % (column-width-large column-width-thumbnail-bigger)

.fil-file-thumbnail
    position relative
    flex 0 0 column-width-thumbnail - 1rem //width without padding
    svg
        display block

    &--spinner
        margin 0 .25rem !important // to override default cozy-ui margin

.fil-file-thumbnail-image
    object-fit cover

.fil-content-shared
    position    absolute
    bottom .8rem
    right .6rem

.fil-content-date
.fil-content-size
    flex 0 0 column-width-small

.fil-content-narrow
    flex 0 0 column-width-thumbnail
    text-align center

.fil-content-status
.fil-content-header-status
    flex 0 0 column-width-medium

    .fil-content-offline
        display none
        justify-content center
        align-items center
        width 1.25rem
        margin-left 1rem
        height 1.25rem
        background-color var(--malachite)
        border-radius 50%

.fil-content-file-action
.fil-content-header-action
    flex 0 0 5%
    text-align right
    width 1.5rem
    padding 0 0 0 .5rem
    margin-right .5rem

.fil-content-header-action
    button
        opacity 1
        color var(--coolGrey)

.fil-content-file-select
    flex       0 0 2rem
    opacity    0
    padding    .9375rem .5rem
    text-align center
    font-size  .875rem
    cursor     default

    [data-input="checkbox"] label
        cursor default
        padding 0

.fil-content-file-action
    opacity     0

.fil-content-body--selectable
    .fil-content-file-select
        opacity 1

.fil-content-row-actioned
    .fil-content-file-action
        opacity 1

.fil-file
    display flex
    flex-direction column
    justify-content center
    width 100%

.fil-file-filename
    flex 0 0 1.3rem

.fil-file-filename-wrapper
    display table
    width   100%
    border-collapse collapse

    .fil-file-filename-and-ext
        display table-cell
        max-width 1px
        width 100%
        overflow hidden
        text-overflow ellipsis
        white-space nowrap

    .fil-file-filename-spinner
        display table-cell
        white-space nowrap

.fil-file-description
    display flex
    justify-content flex-start
    align-items baseline

    &--path
        display contents !important // to take content width

.fil-file-certifications
    flex-shrink 0
    color var(--coolGrey)

    &--separator
        margin-left 0.25rem

    &--icon
        width rem(10)
        height rem(10)

.fil-file-path
.fil-file-infos
.fil-file-description--path
    color var(--coolGrey)
    font-size .75rem
    text-decoration none

.fil-file-path
.fil-file-infos
    flex 0 0 1rem
    position relative
    overflow hidden
    text-overflow ellipsis
    white-space nowrap

    &:hover,
    &:focus
        text-decoration underline

.fil-file-infos
    display none

@keyframes placeHolderShimmer
    0%
        background-position -20rem 0
    80%
        background-position 20rem 0
    80.1%
        background-position -20rem 0
    100%
        background-position -20rem 0

.fil-content-file-placeholder
    animation-duration        2s
    animation-iteration-count infinite
    animation-name            placeHolderShimmer
    animation-timing-function linear
    background-position -20rem 0
    background-image linear-gradient(to right, paleGrey 0%, white 50%, paleGrey 100%)
    background-size 20rem 2.5rem
    background-repeat no-repeat
    background-color var(--paleGrey)
    border-radius .15rem
    height   .75rem
    max-width    100%
    position relative

.fil-content-file .fil-content-file-placeholder:before
    content ""
    display inline-block
    width   2rem
    height   2rem
    background inherit
    animation inherit
    border-radius inherit
    position absolute
    right 100%
    top -80%
    margin-right 1rem

.fil-content-file .fil-content-file-placeholder:before
    animation-delay 0s

.fil-content-file .fil-content-file-placeholder
    animation-delay .1s

.fil-content-date .fil-content-file-placeholder
    animation-delay .5s

.fil-content-size .fil-content-file-placeholder
    animation-delay .7s

.fil-content-status .fil-content-file-placeholder
    animation-delay 1.1s

.fil-content-sharestatus
    cursor pointer
    &--disabled
        cursor default

.fil-content-file-action
    opacity 1
    &--disabled
        opacity .4
        button
            cursor default

.fil-content-row-actioned
    .fil-content-file-action
        button
            background silver
            opacity: 1

// -- responsive

+medium-screen()
    .fil-content-table-selection
        .fil-content-body
            margin-bottom 3rem

+small-screen()
    .fil-content-row
        height 4rem

    .fil-content-row-bigger
        height rem(128)

    .fil-content-head
    .fil-content-date
    .fil-content-size
        display none

    .fil-content-mobile-head
        display flex

    .fil-content-mobile-header.fil-content-header-sortasc
    .fil-content-mobile-header.fil-content-header-sortdesc
        flex 1 1 auto

    .fil-content-mobile-header.fil-content-header-action
        width auto
        padding 0

    .fil-content-cell.fil-content-file
    .fil-content-row-bigger .fil-content-cell.fil-content-file
        flex 1 1 auto

    .fil-content-status
        display    block
        flex       0 0 auto
        padding    0

        .fil-content-offline
            display inline-flex

        .fil-content-sharestatus
            display none

    .fil-content-file-action
        opacity    1
        flex       0 0 3rem
        padding    0

    .fil-content-cell
        &.fil-content-status
            padding 0

        &.fil-content-file-action
            padding 0

        &.fil-content-file
            padding-right 0

        &.fil-content-file-select
            display none
            padding .9375rem 0 .9375rem .9375rem

    .fil-content-body--selectable
        .fil-content-file-select
            display  block
            flex     0 0 5%

        .fil-content-file-action
            opacity 0

    .fil-file-infos
        display flex

    .fil-file-path
        &:hover,
        &:focus
            text-decoration none

